Solve lint warnings